[project]
name = "illustrator-ai-mcp"
version = "0.1.0"
description = "Privacy-first local MCP server that lets AI design in Adobe Illustrator"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pillow>=10.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
illustrator-ai-mcp = "illustrator_ai_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/illustrator_ai_mcp"]
